# SparseLinearSolver

./: CMakeLists.txt  generateProject.cmd
SparseLinearSolver/: CMakeLists.txt
SparseLinearSolver/Include/: CholeskySolver.h  Graph.h  Reordering.h  ReorderingMinimalDegree.h  ReorderingRCM.h  Result.h
SparseLinearSolver/Source/: CholeskySolver.cpp  Graph.cpp  Reordering.cpp  ReorderingMinimalDegree.cpp  ReorderingRCM.cpp  main.cpp
pardisoTestExample/: CMakeLists.txt  generateProject.cmd
pardisoTestExample/Source/: pardiso_sym.cpp
